--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prettier": "3.1.0"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "lint-staged": "^15.1.0"
   },
   "lint-staged": {
